# Tarea3-ELO329

./: README.md
Stage extra/: Posiciones.txt  Stage3.cpp  gpsfollower.cpp  videofollower.cpp  videofollower.h
Stage1/: CMakeLists.txt  Stage1.cpp  videofollower.cpp  videofollower.h  videopublisher.cpp
Stage2/: CMakeLists.txt  Stage2cpp  videopublisher.h
Stage3/: CMakeLists.txt  Component.h  Stage3.cpp  gpscarpublisher.cpp  gpscarpublisher.h  gpsfollower.cpp  gpsfollower.h  publisher.h  subscriber.cpp  subscriber.h  videofollower.cpp  videofollower.h
Stage4/: Stage3.cpp  gpsfollower.h
